objects/zqu__QuoteCharge_Tier__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__Effective_Price__c</fullName>
        <description>The Effective Price of the Charge.</description>
        <inlineHelpText>The Effective Price of the Charge.</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__EndingUnit__c</fullName>
        <label>EndingUnit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsOveragePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOveragePrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat__c</fullName>
        <description>Flat Fee vs. Per Unit</description>
        <inlineHelpText>Flat Fee vs. Per Unit</inlineHelpText>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeId__c</fullName>
        <label>ProductRatePlanChargeId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteCharge__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quote Charge</label>
        <referenceTo>zqu__QuoteCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Tier</relationshipLabel>
        <relationshipName>Quote_Charge_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanCharge__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quote Rate Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote RatePlan Charge Tier</relationshipLabel>
        <relationshipName>Quote_RatePlan_Charge_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Tier</relationshipLabel>
        <relationshipName>RatePlan_Charge_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__StartingUnit__c</fullName>
        <label>StartingUnit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionChargeTierZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan charge tier.</description>
        <label>Subscription Charge Tier Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Tier__c</fullName>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZuoraId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Quote Charge Tier</label>
    <nameField>
        <label>Tier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charge Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>